objects/Checklist__c.object
<CustomObject>
    <description>Lista de contrapartidas do checklist da Visita - Processo de Visitas</description>
    <fields>
        <fullName>ChecklistARG_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Check List ARG</label>
        <referenceTo>CLV_ChecklistVisita_ARG__c</referenceTo>
        <relationshipLabel>Checklist Contrapartidas</relationshipLabel>
        <relationshipName>Checklist_Contrapartidas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_de_visita__c</fullName>
        <label>Checklist de visita</label>
        <referenceTo>Checklist_de_visita__c</referenceTo>
        <relationshipLabel>Checklist Contrapartidas</relationshipLabel>
        <relationshipName>Checklist_Contrapartidas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentários</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OK?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_C__c</fullName>
        <label>Contrapartida</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secao_Contrapartidas__c</fullName>
        <label>Seção Contrapartidas</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_da_visita_contrapartida__c</fullName>
        <formula>Checklist_de_visita__r.Status_da_Visita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status da visita contrapartida</label>
        <type>Text</type>
    </fields>
    <label>Checklist Contrapartida</label>
    <nameField>
        <displayFormat>CONTR-{0}</displayFormat>
        <label>Nome da Contrapartida</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Contrapartidas</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLC_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLC_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Nao_alterar_contrapartidas_se_visita_enc</fullName>
        <active>true</active>
        <description>Nao_alterar_contrapartidas se visita encerrada</description>
        <errorConditionFormula>priorvalue(  Status_da_visita_contrapartida__c  ) = &quot;Encerrada&quot;</errorConditionFormula>
        <errorDisplayField>Comentarios__c</errorDisplayField>
        <errorMessage>Não é possível alterar com o status da Visita = Encerrada.</errorMessage>
    </validationRules>
</CustomObject>